# fhir-py-types-r4b

./: README.md  pyproject.toml  pyproject.yaml
fhirpy_types_r4b/: __init__.py
